// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdown-formatter > generateMarkdownReport > deduplication > should deduplicate selectors keeping highest improvement 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **150ms** per test run
**Average Improvement per Selector:** **50.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🎯 File-Based Fixes

*Update these specific lines in your Page Objects or Test files for immediate impact.*

### 📁 [\`Page.ts\`](Page.ts)

| Location | Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:---------|:----------|--------:|-----:|-----------:|
| [L10:](Page.ts#L10) | \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 3× | 150.0ms |

> **File total:** 150ms saved (1 selector)

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > edge cases > should escape pipe characters in selectors for tables 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **50ms** per test run
**Average Improvement per Selector:** **50.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🎯 File-Based Fixes

*Update these specific lines in your Page Objects or Test files for immediate impact.*

### 📁 [\`Page.ts\`](Page.ts)

| Location | Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:---------|:----------|--------:|-----:|-----------:|
| [L10:](Page.ts#L10) | \`$("sel\\|with\\|pipes")\` | \`$("opt\\|with\\|pipes")\` | 50.0ms | 1× | 50.0ms |

> **File total:** 50ms saved (1 selector)

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > edge cases > should handle missing optimizedSelector 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 0 unique selectors (0 optimizable)

**Total Potential Savings:** **0ms** per test run
**Average Improvement per Selector:** **0.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > edge cases > should handle undefined improvementMs 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 0 unique selectors (0 optimizable)

**Total Potential Savings:** **0ms** per test run
**Average Improvement per Selector:** **0.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > empty data > should generate report with no optimization opportunities message 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Generated:** 2024-01-15

## ✅ Summary

No optimization opportunities found. All selectors are already optimized!
"
`;

exports[`markdown-formatter > generateMarkdownReport > empty data > should include device name in header 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPad Pro 12.9
**Generated:** 2024-01-15

## ✅ Summary

No optimization opportunities found. All selectors are already optimized!
"
`;

exports[`markdown-formatter > generateMarkdownReport > empty data > should include generated date 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Generated:** 2024-01-15

## ✅ Summary

No optimization opportunities found. All selectors are already optimized!
"
`;

exports[`markdown-formatter > generateMarkdownReport > executive summary impact breakdown > should categorize high impact (>50%) 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **60ms** per test run
**Average Improvement per Selector:** **60.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 60.0ms | 1× | 60.0ms |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > executive summary impact breakdown > should categorize low impact (10-20%) 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **15ms** per test run
**Average Improvement per Selector:** **15.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🟡 **Low** (10-20% gain) | 1 | Minor optimization |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 15.0ms | 1× | 15.0ms |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > executive summary impact breakdown > should categorize medium impact (20-50%) 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **35ms** per test run
**Average Improvement per Selector:** **35.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🟠 **Medium** (20-50% gain) | 1 | Recommended |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 35.0ms | 1× | 35.0ms |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > executive summary impact breakdown > should categorize minor impact (<10%) 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **5ms** per test run
**Average Improvement per Selector:** **5.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| ⚪ **Minor** (<10% gain) | 1 | Optional |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 5.0ms | 1× | 5.0ms |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > executive summary impact breakdown > should not show categories with zero count 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **60ms** per test run
**Average Improvement per Selector:** **60.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 60.0ms | 1× | 60.0ms |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > file-based fixes > should group selectors by source file 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 2 unique selectors (2 optimizable)

**Total Potential Savings:** **80ms** per test run
**Average Improvement per Selector:** **40.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |
| 🟠 **Medium** (20-50% gain) | 1 | Recommended |

---

## 🎯 File-Based Fixes

*Update these specific lines in your Page Objects or Test files for immediate impact.*

### 📁 [\`LoginPage.ts\`](LoginPage.ts)

| Location | Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:---------|:----------|--------:|-----:|-----------:|
| [L10:](LoginPage.ts#L10) | \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 1× | 50.0ms |

> **File total:** 50ms saved (1 selector)

### 📁 [\`HomePage.ts\`](HomePage.ts)

| Location | Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:---------|:----------|--------:|-----:|-----------:|
| [L20:](HomePage.ts#L20) | \`$("sel2")\` | \`$("opt2")\` | 30.0ms | 1× | 30.0ms |

> **File total:** 30ms saved (1 selector)

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > file-based fixes > should show file total savings 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 2 unique selectors (2 optimizable)

**Total Potential Savings:** **80ms** per test run
**Average Improvement per Selector:** **40.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |
| 🟠 **Medium** (20-50% gain) | 1 | Recommended |

---

## 🎯 File-Based Fixes

*Update these specific lines in your Page Objects or Test files for immediate impact.*

### 📁 [\`LoginPage.ts\`](LoginPage.ts)

| Location | Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:---------|:----------|--------:|-----:|-----------:|
| [L10:](LoginPage.ts#L10) | \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 1× | 50.0ms |
| [L20:](LoginPage.ts#L20) | \`$("sel2")\` | \`$("opt2")\` | 30.0ms | 1× | 30.0ms |

> **File total:** 80ms saved (2 selectors)

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > file-based fixes > should show line numbers as clickable links in table 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **50ms** per test run
**Average Improvement per Selector:** **50.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🎯 File-Based Fixes

*Update these specific lines in your Page Objects or Test files for immediate impact.*

### 📁 [\`LoginPage.ts\`](LoginPage.ts)

| Location | Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:---------|:----------|--------:|-----:|-----------:|
| [L42:](LoginPage.ts#L42) | \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 1× | 50.0ms |

> **File total:** 50ms saved (1 selector)

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > file-based fixes > should show usage count 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **150ms** per test run
**Average Improvement per Selector:** **50.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🎯 File-Based Fixes

*Update these specific lines in your Page Objects or Test files for immediate impact.*

### 📁 [\`LoginPage.ts\`](LoginPage.ts)

| Location | Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:---------|:----------|--------:|-----:|-----------:|
| [L10:](LoginPage.ts#L10) | \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 3× | 150.0ms |

> **File total:** 150ms saved (1 selector)

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > header statistics > should show analyzed selectors count and calculate statistics 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 2 unique selectors (2 optimizable)

**Total Potential Savings:** **80ms** per test run
**Average Improvement per Selector:** **40.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |
| 🟠 **Medium** (20-50% gain) | 1 | Recommended |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 1× | 50.0ms |
| \`$("sel2")\` | \`$("opt2")\` | 30.0ms | 1× | 30.0ms |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > implementation guide > should include implementation guide with all sections 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **50ms** per test run
**Average Improvement per Selector:** **50.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 1× | 50.0ms |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > markdown formatting > should generate complete markdown report with proper formatting 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **100ms** per test run
**Average Improvement per Selector:** **66.7%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🎯 File-Based Fixes

*Update these specific lines in your Page Objects or Test files for immediate impact.*

### 📁 [\`LoginPage.ts\`](LoginPage.ts)

| Location | Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:---------|:----------|--------:|-----:|-----------:|
| [L10:](LoginPage.ts#L10) | \`$('//XCUIElementTypeButton[@name="Login"]')\` | \`$("~Login")\` | 100.0ms | 1× | 100.0ms |

> **File total:** 100ms saved (1 selector)

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > performance warnings (negative optimizations) > should show performance warnings for negative optimizations 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (0 optimizable, 1 not recommended)

**Total Potential Savings:** **0ms** per test run
**Average Improvement per Selector:** **0.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| ⚠️ **Slower in Testing** | 1 | See warnings below |

---

## ⚠️ Performance Warnings

*In these cases, the suggested native selector was **slower** than XPath in your test environment. This can happen due to:*

- **App-specific optimizations** - Some apps have optimized XPath handling
- **Element hierarchy** - Deep nesting can sometimes favor XPath's tree traversal
- **Caching effects** - First lookups may differ from subsequent ones
- **Appium/driver version** - Native selector support varies by version

*Recommendation: Keep using XPath for these selectors, or test both approaches in your CI pipeline.*

| Location | XPath (Current) | Suggested Native | XPath Time | Native Time | Result |
|:---------|:----------------|:-----------------|:-----------|:------------|:-------|
| *unknown* | \`$("sel1")\` | \`$("opt1")\` | 10ms | 100ms | Native 90ms slower (900%) |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > performance warnings (negative optimizations) > should show slower in testing count in header 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 2 unique selectors (1 optimizable, 1 not recommended)

**Total Potential Savings:** **50ms** per test run
**Average Improvement per Selector:** **50.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |
| ⚠️ **Slower in Testing** | 1 | See warnings below |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 1× | 50.0ms |

---

## ⚠️ Performance Warnings

*In these cases, the suggested native selector was **slower** than XPath in your test environment. This can happen due to:*

- **App-specific optimizations** - Some apps have optimized XPath handling
- **Element hierarchy** - Deep nesting can sometimes favor XPath's tree traversal
- **Caching effects** - First lookups may differ from subsequent ones
- **Appium/driver version** - Native selector support varies by version

*Recommendation: Keep using XPath for these selectors, or test both approaches in your CI pipeline.*

| Location | XPath (Current) | Suggested Native | XPath Time | Native Time | Result |
|:---------|:----------------|:-----------------|:-----------|:------------|:-------|
| *unknown* | \`$("sel2")\` | \`$("opt2")\` | 100ms | 110ms | Native 10ms slower (50%) |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;

exports[`markdown-formatter > generateMarkdownReport > workspace-wide optimizations > should show selectors without known location in workspace-wide section 1`] = `
"# 📊 Mobile Selector Performance Optimizer Report

**Device:** iPhone 15
**Analyzed:** 1 unique selectors (1 optimizable)

**Total Potential Savings:** **50ms** per test run
**Average Improvement per Selector:** **50.0%** faster

---

## 📈 Summary

| Impact Level | Count | Action |
|:-------------|------:|:-------|
| 🔴 **High** (>50% gain) | 1 | Fix immediately |

---

## 🔍 Workspace-Wide Optimizations

*Source file location unknown. Search your IDE (Cmd+Shift+F / Ctrl+Shift+F) for these selectors.*

| Original | Optimized | Per Use | Uses | Total Saved |
|:---------|:----------|--------:|-----:|-----------:|
| \`$("sel1")\` | \`$("opt1")\` | 50.0ms | 1× | 50.0ms |

---

## 💡 Implementation Guide

### Why make these changes?

- **Speed:** Native selectors (\`~\` Accessibility IDs, \`-ios predicate string\`, \`-ios class chain\`) bypass expensive XML tree traversal required by XPath
- **Stability:** Native selectors are less affected by UI hierarchy changes that often break XPath queries
- **Maintainability:** Shorter, more readable selectors are easier to debug and update

### Selector Priority (fastest to slowest)

1. **Accessibility ID** (\`~elementId\`) - Direct lookup, fastest
2. **iOS Predicate String** (\`-ios predicate string:...\`) - Native predicate evaluation
3. **iOS Class Chain** (\`-ios class chain:...\`) - Native hierarchy traversal
4. **XPath** (\`//...\`) - Full XML serialization + parsing, slowest

### Resources

- [WebdriverIO Mobile Selectors](https://webdriver.io/docs/selectors#mobile-selectors)
- [iOS Predicate String](https://webdriver.io/docs/selectors#ios-predicate-string)
- [iOS Class Chain](https://webdriver.io/docs/selectors#ios-class-chain)

---

*Generated by WebdriverIO Mobile Selector Performance Optimizer • 2024-01-15*
"
`;
